@@ -5,7 +5,6 @@ import com.gregtechceu.gtceu.api.blockentity.MetaMachineBlockEntity;
 import com.gregtechceu.gtceu.api.machine.MetaMachine;
 import com.gregtechceu.gtceu.common.machine.storage.CreativeChestMachine;
 import com.gregtechceu.gtceu.common.machine.storage.QuantumChestMachine;
-import com.gregtechceu.gtceu.integration.ae2.machine.MEPatternBufferPartMachine;
 import com.gregtechceu.gtceu.integration.ae2.machine.MEPatternBufferProxyPartMachine;
 import com.gregtechceu.gtceu.utils.GTMath;
 
@@ -61,11 +60,8 @@ public enum GTItemStorageProvider implements IServerExtensionProvider<MetaMachin
             for (int stack : GTMath.split(amount)) {
                 list.add(stored.copyWithCount(stack));
             }
-            return list.isEmpty() ? List.of() : List.of(new ViewGroup<>(list));
-        }
-
-        if (machine instanceof MEPatternBufferPartMachine buffer && !buffer.isFormed()) return Collections.emptyList();
-        if (machine instanceof MEPatternBufferProxyPartMachine proxy) {
+            return list.isEmpty() ? Collections.emptyList() : List.of(new ViewGroup<>(list));
+        } else if (machine instanceof MEPatternBufferProxyPartMachine proxy) {
             var buffer = proxy.getBuffer();
             if (buffer == null) return Collections.emptyList();
             return ItemStorageProvider.INSTANCE.getGroups(serverPlayer, serverLevel, buffer.holder, b);
